--- a/index.html
+++ b/index.html
@@ -43,9 +43,7 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p style="text-align: justify;">I am very fuch fond of graphics designing. In my free times, I do graphics designs. This site is for my graphics designs only.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
@@ -56,9 +54,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-					Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis arcu,
-					id varius justo euismod in. Curabitur egestas consectetur magna.</p>
+					<p style="text-align: justify;">I am a computer engieer by profession. My speciality is software engineering.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
@@ -68,9 +64,7 @@
 				<div class="content">
 					<header>
 						<h2>My Work</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.
-						Fusce blandit ultrices sapien, in accumsan orci rhoncus eu. Sed sodales venenatis
-						arcu, id varius justo euismod in. Curabitur egestas consectetur magna vitae.</p>
+						<p>Here is some of my graphical works. Keep supporting me and if you want me to do graphics desing for you, then please feel free to contact.</p>
 					</header>
 
 					<!-- Gallery  -->
@@ -136,7 +130,7 @@
 				<div class="content">
 					<header>
 						<h2>Say Hello.</h2>
-						<p>Lorem ipsum dolor sit amet et sapien sed elementum egestas dolore condimentum.</p>
+						<p>Feel free to contact me if you want me to do some graphics design for you.</p>
 					</header>
 					<div class="box">
 						<form method="post" action="https://formspree.io/f/myylekor" enctype="multipart/form-data">
