--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<header>
 						<h2>Who I Am</h2>
 					</header>
-					<p style="text-align: justify;">I am a computer engineer by profession. My speciality is software engineering.</p>
+					<p style="text-align: justify;">I am a computer engineer by profession. My speciality is in software engineering.</p>
 				</div>
 				<a href="#work" class="button style2 down anchored">Next</a>
 			</section>
