--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; All Rights Reserved.</li>
+						<li>&copy; <script>document.write(new Date().getFullYear())</script>. All Rights Reserved.</li>
 					</ul>
 
 			</footer>
