updated what do i do

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<header>
 						<h2>What I Do</h2>
 					</header>
-					<p style="text-align: justify;">I am very fuch fond of graphics designing. In my free times, I do graphics designs. This site is for my graphics designs only.</p>
+					<p style="text-align: justify;">I am very much fond of graphics designing. In my free times, I do graphics designs. This site is for my graphics designs only.</p>
 				</div>
 				<a href="#two" class="button style2 down anchored">Next</a>
 			</section>
