updated the image files

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Faria Nur</h2>
 					</header>
-					<p>Welcome to <a href="https://radipu.me">radipu</a>'s graphics design world.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
