--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content">
 					<header>
-						<h2>Faria Nur</h2>
+						<h2>Hey.</h2>
 					</header>
+					<p>Welcome to <a href="https://radipu.me">radipu</a>'s graphics design world.</p>
 					<footer>
 						<a href="#one" class="button style2 down">More</a>
 					</footer>
@@ -69,55 +70,55 @@
 					<!-- Gallery  -->
 						<div class="gallery">
 							<article class="from-left">
-								<a href="images/port_01.png" class="image fit"><img src="images/port_01.png" title="Potrait" alt="" /></a>
+								<a href="images/port_01.png" class="image fit"><img src="images/port_01.jpg" title="Potrait" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Sunset_Sea.png" class="image fit"><img src="images/Sunset_Sea.png" title="Sunset on the sea" alt="" /></a>
+								<a href="images/Sunset_Sea.png" class="image fit"><img src="images/Sunset_Sea.jpg" title="Sunset on the sea" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/The_Way.png" class="image fit"><img src="images/The_Way.png" title="The way meet to the skyline" alt="" /></a>
+								<a href="images/The_Way.png" class="image fit"><img src="images/The_Way.jpg" title="The way meet to the skyline" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Dual_Bird_Midnight2.png" class="image fit"><img src="images/Dual_Bird_Midnight2.png" title="Dual bird at midnight" alt="" /></a>
+								<a href="images/Dual_Bird_Midnight2.png" class="image fit"><img src="images/Dual_Bird_Midnight2.jpg" title="Dual bird at midnight" alt="" /></a>
 							</article>
 							<article class="from-left">
-								<a href="images/Romantic_Night.png" class="image fit"><img src="images/Romantic_Night.png" title="You and Me" alt="" /></a>
+								<a href="images/Romantic_Night.png" class="image fit"><img src="images/Romantic_Night.jpg" title="You and Me" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/port_02.png" class="image fit"><img src="images/port_02.png" title="Potrait" alt="" /></a>
+								<a href="images/port_02.png" class="image fit"><img src="images/port_02.jpg" title="Potrait" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Love_Illustration.png" class="image fit"><img src="images/Love_Illustration.png" title="Solidarity Love" alt="" /></a>
+								<a href="images/Love_Illustration.png" class="image fit"><img src="images/Love_Illustration.jpg" title="Solidarity Love" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Moonligt_Lonely.png" class="image fit"><img src="images/Moonligt_Lonely.png" title="Lonely way at moonlight" alt="" /></a>
+								<a href="images/Moonligt_Lonely.png" class="image fit"><img src="images/Moonligt_Lonely.jpg" title="Lonely way at moonlight" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Rainy_Night.png" class="image fit"><img src="images/Rainy_Night.png" title="We are close but too far" alt="" /></a>
+								<a href="images/Rainy_Night.png" class="image fit"><img src="images/Rainy_Night.jpg" title="We are close but too far" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Background.png" class="image fit"><img src="images/Background.png" title="Mountain" alt="" /></a>
+								<a href="images/Background.png" class="image fit"><img src="images/Background.jpg" title="Mountain" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Love_Together.png" class="image fit"><img src="images/Love_Together.png" title="You and Me is LOVE" alt="" /></a>
+								<a href="images/Love_Together.png" class="image fit"><img src="images/Love_Together.jpg" title="You and Me is LOVE" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Moon_on_the_sea.png" class="image fit"><img src="images/Moon_on_the_sea.png" title="Moon meet the sea" alt="" /></a>
+								<a href="images/Moon_on_the_sea.png" class="image fit"><img src="images/Moon_on_the_sea.jpg" title="Moon meet the sea" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Moonligt_Lonely2.png" class="image fit"><img src="images/Moonligt_Lonely2.png" title="Lonely way" alt="" /></a>
+								<a href="images/Moonligt_Lonely2.png" class="image fit"><img src="images/Moonligt_Lonely2.jpg" title="Lonely way" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Moon_on_the_sea_depart2.png" class="image fit"><img src="images/Moon_on_the_sea_depart2.png" title="Depart" alt="" /></a>
+								<a href="images/Moon_on_the_sea_depart2.png" class="image fit"><img src="images/Moon_on_the_sea_depart2.jpg" title="Depart" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/The Last Warrior.png" class="image fit"><img src="images/The Last Warrior.png" title="The Last Warrior" alt="" /></a>
+								<a href="images/The Last Warrior.png" class="image fit"><img src="images/The Last Warrior.jpg" title="The Last Warrior" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/How far you are.png" class="image fit"><img src="images/How far you are.png" title="How far you are" alt="" /></a>
+								<a href="images/How far you are.png" class="image fit"><img src="images/How far you are.jpg" title="How far you are" alt="" /></a>
 							</article>
 							<article class="from-right">
-								<a href="images/Your Birthday.png" class="image fit"><img src="images/Your Birthday.png" title="Your Birthday" alt="" /></a>
+								<a href="images/Your Birthday.png" class="image fit"><img src="images/Your Birthday.jpg" title="Your Birthday" alt="" /></a>
 							</article>
 						</div>
 
@@ -174,7 +175,7 @@
 
 				<!-- Menu -->
 					<ul class="menu">
-						<li>&copy; <script>document.write(new Date().getFullYear())</script>. All Rights Reserved.</li>
+						<li>&copy; All Rights Reserved.</li>
 					</ul>
 
 			</footer>
