updated the interface

--- a/index.html
+++ b/index.html
@@ -1,190 +1,171 @@
 <!DOCTYPE HTML>
+
 <html>
 	<head>
-		<title>Graphics by Dipu</title>
+		<title>Graphical Works of radipu</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="shortcut icon" type="image/png" href="images/favicon.png">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="shortcut icon" type="image/png" href="images/favicon.png">
 	</head>
 	<body class="is-preload">
 
-		<!-- Header -->
-			<header id="header">
-				<h1>radipu Designs</h1>
-				<nav>
-					<ul>
-						<li><a href="#intro">Intro</a></li>
-						<li><a href="#one">What I Do</a></li>
-						<li><a href="#two">Who I Am</a></li>
-						<li><a href="#work">My Work</a></li>
-						<li><a href="#contact">Contact</a></li>
-					</ul>
-				</nav>
-			</header>
+		<!-- Wrapper -->
+			<div id="wrapper">
 
-		<!-- Intro -->
-			<section id="intro" class="main style1 dark fullscreen">
-				<div class="content">
-					<header>
-						<h2>Hey.</h2>
-					</header>
-					<p>Welcome to <a href="https://radipu.me">radipu</a>'s graphics design world.</p>
-					<footer>
-						<a href="#one" class="button style2 down">More</a>
-					</footer>
-				</div>
-			</section>
-
-		<!-- One -->
-			<section id="one" class="main style2 right dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>What I Do</h2>
-					</header>
-					<p style="text-align: justify;">I am very much fond of graphics designing. In my free times, I do graphics designs. This site is for my graphics designs only.</p>
-				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
-			</section>
-
-		<!-- Two -->
-			<section id="two" class="main style2 left dark fullscreen">
-				<div class="content box style2">
-					<header>
-						<h2>Who I Am</h2>
-					</header>
-					<p style="text-align: justify;">I am a computer engineer by profession. My speciality is in software engineering.</p>
-				</div>
-				<a href="#work" class="button style2 down anchored">Next</a>
-			</section>
-
-		<!-- Work -->
-			<section id="work" class="main style3 primary">
-				<div class="content">
-					<header>
-						<h2>My Work</h2>
-						<p>Here is some of my graphical works. Keep supporting me and if you want me to do graphics desing for you, then please feel free to contact.</p>
-					</header>
-
-					<!-- Gallery  -->
-						<div class="gallery">
-							<article class="from-left">
-								<a href="images/port_01.png" class="image fit"><img src="images/port_01.jpg" title="Potrait" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Sunset_Sea.png" class="image fit"><img src="images/Sunset_Sea.jpg" title="Sunset on the sea" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/The_Way.png" class="image fit"><img src="images/The_Way.jpg" title="The way meet to the skyline" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Dual_Bird_Midnight2.png" class="image fit"><img src="images/Dual_Bird_Midnight2.jpg" title="Dual bird at midnight" alt="" /></a>
-							</article>
-							<article class="from-left">
-								<a href="images/Romantic_Night.png" class="image fit"><img src="images/Romantic_Night.jpg" title="You and Me" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/port_02.png" class="image fit"><img src="images/port_02.jpg" title="Potrait" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Love_Illustration.png" class="image fit"><img src="images/Love_Illustration.jpg" title="Solidarity Love" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Moonligt_Lonely.png" class="image fit"><img src="images/Moonligt_Lonely.jpg" title="Lonely way at moonlight" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Rainy_Night.png" class="image fit"><img src="images/Rainy_Night.jpg" title="We are close but too far" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Background.png" class="image fit"><img src="images/Background.jpg" title="Mountain" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Love_Together.png" class="image fit"><img src="images/Love_Together.jpg" title="You and Me is LOVE" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Moon_on_the_sea.png" class="image fit"><img src="images/Moon_on_the_sea.jpg" title="Moon meet the sea" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Moonligt_Lonely2.png" class="image fit"><img src="images/Moonligt_Lonely2.jpg" title="Lonely way" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Moon_on_the_sea_depart2.png" class="image fit"><img src="images/Moon_on_the_sea_depart2.jpg" title="Depart" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/The Last Warrior.png" class="image fit"><img src="images/The Last Warrior.jpg" title="The Last Warrior" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/How far you are.png" class="image fit"><img src="images/How far you are.jpg" title="How far you are" alt="" /></a>
-							</article>
-							<article class="from-right">
-								<a href="images/Your Birthday.png" class="image fit"><img src="images/Your Birthday.jpg" title="Your Birthday" alt="" /></a>
-							</article>
-						</div>
-
-				</div>
-			</section>
-
-		<!-- Contact -->
-			<section id="contact" class="main style3 secondary">
-				<div class="content">
-					<header>
-						<h2>Say Hello.</h2>
-						<p>Feel free to contact me if you want me to do some graphics design for you.</p>
-					</header>
-					<div class="box">
-						<form method="post" action="https://formspree.io/f/myylekor" enctype="multipart/form-data">
-							<div class="fields">
-								<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" placeholder="Enter your full name" required />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="email" name="email" id="email" placeholder="Enter a valid email" required />
-										</div>
-										<div class="field">
-											<label for="subject">Subject</label>
-											<input type="text" name="subject" id="subject" placeholder="Enter the subject" required />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" placeholder="Type your message here" rows="4" required></textarea>
-										</div>
-							</div>
-							<ul class="actions special">
-								<li><input type="submit" value="Send Message" /></li>
+				<!-- Header -->
+					<header id="header">
+						<h1><a href="index.html"><strong>Graphical Work</strong> by radipu</a></h1>
+						<nav>
+							<ul>
+								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
 							</ul>
-						</form>
+						</nav>
+					</header>
+
+				<!-- Main -->
+					<div id="main">
+						<article class="thumb">
+							<a href="images/fulls/01.jpg" class="image"><img src="images/fulls/01.jpg" alt="" /></a>
+							<h2>Potrait-01</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/02.jpg" class="image"><img src="images/fulls/02.jpg" alt="" /></a>
+							<h2>Sunset in the sea</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/03.jpg" class="image"><img src="images/fulls/03.jpg" alt="" /></a>
+							<h2>The Way</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/04.jpg" class="image"><img src="images/fulls/04.jpg" alt="" /></a>
+							<h2>Dual bird at midnight</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/05.jpg" class="image"><img src="images/fulls/05.jpg" alt="" /></a>
+							<h2>Romantic Night</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/06.jpg" class="image"><img src="images/fulls/06.jpg" alt="" /></a>
+							<h2>Potrait-02</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/07.jpg" class="image"><img src="images/fulls/07.jpg" alt="" /></a>
+							<h2>Love Illustration</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/08.jpg" class="image"><img src="images/fulls/08.jpg" alt="" /></a>
+							<h2>Moonlight Lonely</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/09.jpg" class="image"><img src="images/fulls/09.jpg" alt="" /></a>
+							<h2>Rainy Night</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/10.jpg" class="image"><img src="images/fulls/10.jpg" alt="" /></a>
+							<h2>Mountain</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/11.jpg" class="image"><img src="images/fulls/11.jpg" alt="" /></a>
+							<h2>Love Together</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/12.jpg" class="image"><img src="images/fulls/12.jpg" alt="" /></a>
+							<h2>Moon on the Sea</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/13.jpg" class="image"><img src="images/fulls/13.jpg" alt="" /></a>
+							<h2>Moonlight Lonely-2</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/14.jpg" class="image"><img src="images/fulls/14.jpg" alt="" /></a>
+							<h2>Moon on the Sea-Depart</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/15.jpg" class="image"><img src="images/fulls/15.jpg" alt="" /></a>
+							<h2>The Last Warrior</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/16.jpg" class="image"><img src="images/fulls/16.jpg" alt="" /></a>
+							<h2>How Far You Are</h2>
+							<p></p>
+						</article>
+						<article class="thumb">
+							<a href="images/fulls/17.jpg" class="image"><img src="images/fulls/17.jpg" alt="" /></a>
+							<h2>Your Birthday</h2>
+							<p></p>
+						</article>
 					</div>
-				</div>
-			</section>
 
-		<!-- Footer -->
-			<footer id="footer">
+				<!-- Footer -->
+					<footer id="footer" class="panel">
+						<div class="inner split">
+							<div>
+								<section>
+									<h2>Magna feugiat sed adipiscing</h2>
+									<p>Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum eget quis orci mattis aliquet. Maecenas fringilla et ante at lorem et ipsum. Dolor nulla eu bibendum sapien. Donec non pharetra dui. Nulla consequat, ex ut suscipit rutrum, mi dolor tincidunt erat, et scelerisque turpis ipsum.</p>
+								</section>
+								<section>
+									<h2>Follow me on ...</h2>
+									<ul class="icons">
+										<li><a href="https://twitter.com/radipu" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.facebook.com/radipu13" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="https://www.instagram.com/radipu13" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="https://www.github.com/radipu" target="_blank" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/radipu/" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://www.behance.net/radipu" target="_blank" class="icon brands fa-behance"><span class="label">Behance</span></a></li>
+									</ul>
+								</section>
+								<p class="copyright">
+									&copy; radipu. All rights reserved.
+								</p>
+							</div>
+							<div>
+								<section>
+									<h2>Get in touch</h2>
+									<form method="post" action="https://formspree.io/f/xwkyjwnk" enctype="multipart/form-data">
+										<div class="fields">
+											<div class="field half">
+												<input type="text" name="name" id="name" placeholder="Name" />
+											</div>
+											<div class="field half">
+												<input type="text" name="email" id="email" placeholder="Email" />
+											</div>
+											<div class="field">
+												<textarea name="message" id="message" rows="4" placeholder="Message"></textarea>
+											</div>
+										</div>
+										<ul class="actions">
+											<li><input type="submit" value="Send" class="primary" /></li>
+											<li><input type="reset" value="Reset" /></li>
+										</ul>
+									</form>
+								</section>
+							</div>
+						</div>
+					</footer>
 
-				<!-- Icons -->
-					<ul class="icons">
-						<li><a href="https://twitter.com/radipu" target="_blank" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="https://www.facebook.com/radipu13" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/radipu13" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="https://www.linkedin.com/in/radipu" target="_blank" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-						<li><a href="https://www.behance.net/radipu" target="_blank" class="icon brands fa-behance"><span class="label">Behance</span></a></li>
-						<li><a href="https://www.pinterest.com/radipu94" target="_blank" class="icon brands fa-pinterest"><span class="label">Pinterest</span></a></li>
-					</ul>
-
-				<!-- Menu -->
-					<ul class="menu">
-						<li>&copy; All Rights Reserved.</li>
-					</ul>
-
-			</footer>
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.poptrox.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
