--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 						<h1><a href="index.html"><strong>Graphical Work</strong> by radipu</a></h1>
 						<nav>
 							<ul>
-								<li><a href="#footer" class="icon solid fa-info-circle">About</a></li>
+								<li><a href="#footer" class="icon solid fa-info-circle">Contact</a></li>
 							</ul>
 						</nav>
 					</header>
